fixed error z-index

--- a/src/dashboard/sideBar/sideBar.css
+++ b/src/dashboard/sideBar/sideBar.css
@@ -303,6 +303,7 @@
     transition: all 1s ease; 
     white-space: nowrap;
     gap: 15px;
+    z-index: 2;
    
 }
 .sidebar{
@@ -318,6 +319,7 @@
     justify-content: space-between;
     transition: all 1s ease; 
     white-space: nowrap;
+    z-index: 2;
 }
 .sidebar__container{
     width: 100%;
@@ -330,14 +332,13 @@
     display: flex;
     flex-direction: column;
     transition: all .5s ease; 
-    
     white-space: nowrap;
     z-index: 1;
     border: 1px solid #E0E0E0;
     border-radius: 10px;
     justify-content: end;
     gap: 7.5px;
-    height: 300px;
+    z-index: 2;
     
 }
 
@@ -389,6 +390,7 @@
     border-radius: 10px;
     justify-content: end;
     gap: 7.5px;
+    z-index: 2;
     
 }
 .logo-container{
